--- a/news.html
+++ b/news.html
@@ -59,6 +59,7 @@
 									<section class="box features">
 										<h2 class="major"><span>新闻纪录</span></h2>
                                         
+<p>[2021-08-14] 我们有关基于深度学习设计大系统参数范围的自由曲面成像系统初始结构的论文在线发表于顶级期刊<strong>Optics Express</strong>。</p>
 <p>[2021-07-02] 实验室2021届研究生毕业。感谢大家为实验室作出的贡献，祝大家前程似锦！</p>
 
 <div class="row"><div class="col-10"><section class="box feature">
@@ -76,6 +77,7 @@
 </div>
 <p>[2021-05-19] 我们有关利用高斯径向基函数曲面设计大视场自由曲面成像系统的论文在线发表于<strong>Applied Optics</strong>。</p>
 <p>[2021-05-10] 我们参与合作的有关实现高分辨率红外压缩感知成像的论文在线发表于顶级期刊<strong>Optics Letters</strong>。</p>
+<p>[2021-05-05] 我们有关设计紧凑型照明模块实现短距复杂非常规照度调控的几何论文在线发表于<strong>Applied Optics</strong>。</p>
 <p>[2021-04-16] 我们有关利用双自由曲面透镜实现大出光角度扩展光源的辐照度分布调控的论文在线发表于顶级期刊<strong>Optics Express</strong>。</p>
 <p>[2021-03-01] 我们有关考虑径向与切向畸变的光学系统畸变校正的论文在线发表于<strong>Results in Optics</strong>。</p>
 <p>[2021-02-23] 恭喜姚成同学顺利通过博士学位论文答辩。感谢姚成同学为实验室作出的贡献，祝姚博士前程似锦！</p>
