--- a/publications.html
+++ b/publications.html
@@ -101,9 +101,13 @@ a:active {
 <h3>2021年</h3>
 
 
-<p>[61]	Junhao Ni, Tong Yang*, Dewen Cheng, and Yongtian Wang, "Design method of wide field-of-view imaging systems using Gaussian radial basis functions freeform surfaces," <strong>Applied Optics</strong> 60, 4491-4501 (2021).<a href="https://doi.org/10.1364/AO.423022"> DOI: 10.1364/AO.423022</a></p>
+<p>[63]	Wenchen Chen, Tong Yang*, Dewen Cheng, and Yongtian Wang, "Generating starting points for designing freeform imaging optical systems based on deep learning," <strong>Optics Express</strong> 29, 27845-27870 (2021).<a href="https://doi.org/10.1364/OE.432745"> DOI: 10.1364/OE.432745</a></p>
 
-<p>[60]	Linxia Zhang, Jun Ke*, Sheng Chi, Xiaowen Hao, Tong Yang, and Dewen Cheng, "High-resolution fast mid-wave infrared compressive imaging," <strong>Optics Letters</strong> 46, 2469-2472 (2021).<a href="https://doi.org/10.1364/OL.420481"> DOI: 10.1364/OL.420481</a></p>
+<p>[62]	Junhao Ni, Tong Yang*, Dewen Cheng, and Yongtian Wang, "Design method of wide field-of-view imaging systems using Gaussian radial basis functions freeform surfaces," <strong>Applied Optics</strong> 60, 4491-4501 (2021).<a href="https://doi.org/10.1364/AO.423022"> DOI: 10.1364/AO.423022</a></p>
+
+<p>[61]	Linxia Zhang, Jun Ke*, Sheng Chi, Xiaowen Hao, Tong Yang, and Dewen Cheng, "High-resolution fast mid-wave infrared compressive imaging," <strong>Optics Letters</strong> 46, 2469-2472 (2021).<a href="https://doi.org/10.1364/OL.420481"> DOI: 10.1364/OL.420481</a></p>
+
+<p>[60]	Yue Liu, Dewen Cheng*, Qichao Hou, Hailong Chen, Zexin Feng, Tong Yang, and Yongtian Wang, "Compact integrator design for short-distance sharp and unconventional geometric irradiance tailoring," <strong>Applied Optics</strong> 60, 4165-4176 (2021).<a href="https://doi.org/10.1364/AO.4223842"> DOI: 10.1364/AO.422384</a></p>
 
 <p>[59]	Yuyin Li, Zexin Feng*, Dewen Cheng, and Yongtian Wang, "Designing double freeform surfaces for large ray bending irradiance tailoring of extended LED sources," <strong>Optics Express</strong> 29, 13469-13485 (2021).<a href="https://doi.org/10.1364/OE.423629"> DOI: 10.1364/OE.423629</a></p>
 
