--- a/news.html
+++ b/news.html
@@ -59,7 +59,7 @@
 									<section class="box features">
 										<h2 class="major"><span>新闻纪录</span></h2>
                                         
-<p>[2021-08-14] 我们有关基于深度学习设计大系统参数范围的自由曲面成像系统初始结构的论文在线发表于顶级期刊<strong>Optics Express</strong>。</p>
+<p>[2021-08-14] 我们有关基于深度学习设计大系统参数范围的自由曲面成像系统初始结构的论文在线发表于顶级期刊<strong>Optics Express</strong>，并被选为<strong>Editors' Pick</strong>。</p>
 <p>[2021-07-02] 实验室2021届研究生毕业。感谢大家为实验室作出的贡献，祝大家前程似锦！</p>
 
 <div class="row"><div class="col-10"><section class="box feature">
@@ -164,7 +164,7 @@
 <p>[2019-11-10] 博士研究生顾罗获得2019年度<strong>博士研究生国家奖学金</strong>。</p>
 
 
-<p>[2019-11-08] 我们有关利用中间照度分布传输方法(Iterative irradiance transport, IIT)构建光学自由曲面的论文在线发表于顶级期刊<strong>Optics Letters</strong>。</p>
+<p>[2019-11-08] 我们有关利用中间照度分布传输方法(Iterative irradiance transport, IIT)构建光学自由曲面的论文在线发表于顶级期刊<strong>Optics Letters</strong>，并被选为<strong>Editors' Pick</strong>。</p>
 
 
 
