--- a/publications.html
+++ b/publications.html
@@ -101,7 +101,7 @@ a:active {
 <h3>2021年</h3>
 
 
-<p>[63]	Wenchen Chen, Tong Yang*, Dewen Cheng, and Yongtian Wang, "Generating starting points for designing freeform imaging optical systems based on deep learning," <strong>Optics Express</strong> 29, 27845-27870 (2021).<a href="https://doi.org/10.1364/OE.432745"> DOI: 10.1364/OE.432745</a></p>
+<p>[63]	Wenchen Chen, Tong Yang*, Dewen Cheng, and Yongtian Wang, "Generating starting points for designing freeform imaging optical systems based on deep learning," <strong>Optics Express</strong> 29, 27845-27870 (2021).<a href="https://doi.org/10.1364/OE.432745"> DOI: 10.1364/OE.432745</a><strong> (Editors' Pick)</strong></p>
 
 <p>[62]	Junhao Ni, Tong Yang*, Dewen Cheng, and Yongtian Wang, "Design method of wide field-of-view imaging systems using Gaussian radial basis functions freeform surfaces," <strong>Applied Optics</strong> 60, 4491-4501 (2021).<a href="https://doi.org/10.1364/AO.423022"> DOI: 10.1364/AO.423022</a></p>
 
@@ -140,7 +140,7 @@ a:active {
                                         
 <p>[49]	Junhao Ni, Tong Yang*, Yue Liu, Dewen Cheng, Yongtian Wang, “Description and tolerance analysis of freeform surface figure error using specific-probability-distributed Gaussian radial basis functions,” <strong>Optics Express</strong>, 27(22): 31820-31839, 2019.<a href="https://dx.doi.org/10.1364/OE.27.031820"> DOI: 10.1364/OE.27.031820</a></p>
 
-<p>[48]	Zexin Feng*, Dewen Cheng, and Yongtian Wang, “Transferring freeform lens design into phase retrieval through intermediate irradiance transport,” <strong>Optics Letters</strong>, 44(22): 5501-5504, 2019.<a href="https://dx.doi.org/10.1364/OL.44.005501"> DOI: 10.1364/OL.44.005501</a></p>
+<p>[48]	Zexin Feng*, Dewen Cheng, and Yongtian Wang, “Transferring freeform lens design into phase retrieval through intermediate irradiance transport,” <strong>Optics Letters</strong>, 44(22): 5501-5504, 2019.<a href="https://dx.doi.org/10.1364/OL.44.005501"> DOI: 10.1364/OL.44.005501</a><strong> (Editors' Pick)</strong></p>
 
 <p>[47]	 Zhuojing Zhao, Dewen Cheng*, Tong Yang, Qiwei Wang, Qichao Hou, Luo Gu, Yongtian Wang, “Design and evaluation of a biocular system,” <strong>Applied Optics</strong>, 58(28): 7851-7857，2019.<a href="https://dx.doi.org/10.1364/AO.58.007851"> DOI: 10.1364/AO.58.007851 </a></p>
 
