--- a/yt_personal.html
+++ b/yt_personal.html
@@ -96,7 +96,7 @@
 <p></p>
 
 
-<p>[1]	Wenchen Chen, Tong Yang*, Dewen Cheng, and Yongtian Wang, "Generating starting points for designing freeform imaging optical systems based on deep learning," <strong>Optics Express</strong> 29, 27845-27870 (2021).</p>
+<p>[1]	Wenchen Chen, Tong Yang*, Dewen Cheng, and Yongtian Wang, "Generating starting points for designing freeform imaging optical systems based on deep learning," <strong>Optics Express</strong> 29, 27845-27870 (2021).<strong> (Editors' Pick)</strong></p>
 
 <p>[2]	Junhao Ni, Tong Yang*, Dewen Cheng, and Yongtian Wang, "Design method of wide field-of-view imaging systems using Gaussian radial basis functions freeform surfaces," <strong>Applied Optics</strong> 60, 4491-4501 (2021).</p>
 
