--- a/news.html
+++ b/news.html
@@ -58,7 +58,10 @@
 								<!-- Features -->
 									<section class="box features">
 										<h2 class="major"><span>新闻纪录</span></h2>
-                                        
+
+
+<p>[2021-08-29] 欢迎王赫、陈椿元、戴玺隆、黄逸伦、廖清明、毛卜玉、伍泽元、徐慧明8位同学加入实验室团队！</p>                                 
+<p>[2021-08-23] 我们有关利用自由曲面透镜实现光场控制的论文在线发表于顶级期刊<strong>Photonics Research</strong>。</p>
 <p>[2021-08-14] 我们有关基于深度学习设计大系统参数范围的自由曲面成像系统初始结构的论文在线发表于顶级期刊<strong>Optics Express</strong>，并被选为<strong>Editors' Pick</strong>。</p>
 <p>[2021-07-02] 实验室2021届研究生毕业。感谢大家为实验室作出的贡献，祝大家前程似锦！</p>
 
