--- a/publications.html
+++ b/publications.html
@@ -100,6 +100,7 @@ a:active {
 
 <h3>2021年</h3>
 
+<p>[64]	Zexin Feng, Dewen Cheng, and Yongtian Wang*, "Iterative freeform lens design for optical field control," <strong>Photonics Research</strong> 9, 1775-1783 (2021).<a href="https://doi.org/10.1364/PRJ.430221"> DOI: 10.1364/PRJ.430221</a></p>
 
 <p>[63]	Wenchen Chen, Tong Yang*, Dewen Cheng, and Yongtian Wang, "Generating starting points for designing freeform imaging optical systems based on deep learning," <strong>Optics Express</strong> 29, 27845-27870 (2021).<a href="https://doi.org/10.1364/OE.432745"> DOI: 10.1364/OE.432745</a><strong> (Editors' Pick)</strong></p>
 
