--- a/news.html
+++ b/news.html
@@ -59,7 +59,8 @@
 									<section class="box features">
 										<h2 class="major"><span>新闻纪录</span></h2>
 
-
+<p>[2021-09-02] 我们有关自由曲面压缩感知成像系统设计的论文在线发表于<strong>Chinese Optics Letters</strong>。</p>
+<p>[2021-09-01] 我们有关形成同一性光束阵列的自由曲面激光分束系统构建的论文在线发表于顶级期刊<strong>Optics Express</strong>。</p>
 <p>[2021-08-29] 欢迎王赫、陈椿元、戴玺隆、黄逸伦、廖清明、毛卜玉、伍泽元、徐慧明8位同学加入实验室团队！</p>                                 
 <p>[2021-08-23] 我们有关利用自由曲面透镜实现光场控制的论文在线发表于顶级期刊<strong>Photonics Research</strong>。</p>
 <p>[2021-08-14] 我们有关基于深度学习设计大系统参数范围的自由曲面成像系统初始结构的论文在线发表于顶级期刊<strong>Optics Express</strong>，并被选为<strong>Editors' Pick</strong>。</p>
