--- a/publications.html
+++ b/publications.html
@@ -100,6 +100,10 @@ a:active {
 
 <h3>2021年</h3>
 
+<p>[66]	Dewen Cheng, Hailong Chen, Tong Yang*, Jun Ke, Yang Li and Yongtian Wang, "Optical design of a compact and high-transmittance compressive sensing imaging system enabled by freeform optics," <strong>Chinese Optics Letters</strong> 19, 112202 (2021).<a href="https://doi.org/10.3788/COL202119.112202"> DOI: 10.3788/COL202119.112202</a></p>
+
+<p>[65]	Jia Si, Zexin Feng*, Dewen Cheng, and Yongtian Wang, "Freeform beam splitting system design for generating an array of identical sub-beams," <strong>Optics Express</strong> 29, 29918-29935 (2021).<a href="https://doi.org/10.1364/OE.431899"> DOI: 10.1364/OE.431899</a></p>
+
 <p>[64]	Zexin Feng, Dewen Cheng, and Yongtian Wang*, "Iterative freeform lens design for optical field control," <strong>Photonics Research</strong> 9, 1775-1783 (2021).<a href="https://doi.org/10.1364/PRJ.430221"> DOI: 10.1364/PRJ.430221</a></p>
 
 <p>[63]	Wenchen Chen, Tong Yang*, Dewen Cheng, and Yongtian Wang, "Generating starting points for designing freeform imaging optical systems based on deep learning," <strong>Optics Express</strong> 29, 27845-27870 (2021).<a href="https://doi.org/10.1364/OE.432745"> DOI: 10.1364/OE.432745</a><strong> (Editors' Pick)</strong></p>
