--- a/publications.html
+++ b/publications.html
@@ -82,7 +82,7 @@ a:active {
 											<section>
 											
 												<p>
-													近年来发表论文70余篇，SCI收录40余篇，授权国家发明专利40项(11项转化) ，国际专利5项(全部转化)。
+													近年来发表论文90余篇，SCI收录50余篇，授权国家发明专利40项(11项转化) ，国际专利5项(全部转化)。
 												</p>
 											</section>
 
@@ -100,7 +100,9 @@ a:active {
 
 <h3>2021年</h3>
 
-<p>[66]	Dewen Cheng, Hailong Chen, Tong Yang*, Jun Ke, Yang Li and Yongtian Wang, "Optical design of a compact and high-transmittance compressive sensing imaging system enabled by freeform optics," <strong>Chinese Optics Letters</strong> 19, 112202 (2021).<a href="https://doi.org/10.3788/COL202119.112202"> DOI: 10.3788/COL202119.112202</a></p>
+<p>[67]	Dewen Cheng, Qiwei Wang, Yue Liu, Hailong Chen, Dongwei Ni, Ximeng Wang, Cheng Yao, Qichao Hou, Weihong Hou, Gang Luo, and Yongtian Wang*, "Design and manufacture AR head-mounted displays: A review and outlook," <strong>Light: Advanced Manufacturing</strong> 2, 24 (2021).<a href="https://doi.org/10.37188/lam.2021.024"> DOI: 10.37188/lam.2021.024</a></p>
+
+<p>[66]	Dewen Cheng, Hailong Chen, Tong Yang*, Jun Ke, Yang Li, and Yongtian Wang, "Optical design of a compact and high-transmittance compressive sensing imaging system enabled by freeform optics," <strong>Chinese Optics Letters</strong> 19, 112202 (2021).<a href="https://doi.org/10.3788/COL202119.112202"> DOI: 10.3788/COL202119.112202</a></p>
 
 <p>[65]	Jia Si, Zexin Feng*, Dewen Cheng, and Yongtian Wang, "Freeform beam splitting system design for generating an array of identical sub-beams," <strong>Optics Express</strong> 29, 29918-29935 (2021).<a href="https://doi.org/10.1364/OE.431899"> DOI: 10.1364/OE.431899</a></p>
 
