--- a/news.html
+++ b/news.html
@@ -59,6 +59,9 @@
 									<section class="box features">
 										<h2 class="major"><span>新闻纪录</span></h2>
 
+<p>[2021-10-10] 实验室教师冯泽心在COS/SPIE Photonics Asia 2021学术会议做<strong>邀请报告</strong>“Iterative freeform lens design for extended light source”。
+<p>[2021-09-14] 实验室教师杨通在EOS Annual Meeting (EOSAM) 2021学术会议做<strong>邀请报告</strong>“Designing freeform imaging optics based on machine learning”。
+<p>[2021-09-14] 实验室教师冯泽心在SPIE Optical System Design 2021学术会议做<strong>邀请报告</strong>“Optimizing freeform lenses for non-rectangular irradiance tailoring of extended LED sources”。
 <p>[2021-09-04] 我们有关AR头戴显示器设计与制造的综述论文在线发表于<strong>Light: Advanced Manufacturing</strong>。</p>
 <p>[2021-09-02] 我们有关自由曲面压缩感知成像系统设计的论文在线发表于<strong>Chinese Optics Letters</strong>。</p>
 <p>[2021-09-01] 我们有关形成同一性光束阵列的自由曲面激光分束系统构建的论文在线发表于顶级期刊<strong>Optics Express</strong>。</p>
@@ -69,7 +72,8 @@
 
 <div class="row"><div class="col-10"><section class="box feature">
 <a class="image featured"><img src="images/groupwide3.jpg" alt="" /></a>
-</section></div></div>                                        
+</section></div></div>
+<p>[2021-09-14] 实验室教师杨通在OSA Optical Design and Fabrication Congress 2021学术会议做口头报告“Design Method of Imaging Optics Using Phase Elements with Flat/Freeform-Surface-Based Geometric Substrate”。学生陈海龙做口头报告“Design of a Compact Head-Mounted Display Using Freeform Prisms”。                                      
 <p>[2021-06-24] 祝贺倪俊豪同学的硕士学位论文被评为<strong>北京理工大学优秀硕士学位论文（校优硕）</strong>。</p>
 <p>[2021-06-10] 祝贺倪俊豪、段璎哲同学被评为<strong>北京理工大学优秀毕业生</strong>；祝贺段璎哲同学被评为<strong>北京市优秀毕业生</strong>。</p>
 <p>[2021-06-06] 恭喜雷卫星、周茂、袁瑛、司佳、段璎哲、倪俊豪六位同学顺利通过硕士学位论文答辩。</p>
