--- a/fzx_personal.html
+++ b/fzx_personal.html
@@ -69,11 +69,11 @@
                                                 <div class="col-9">
 
 <h2 align="left">冯泽心</h2>
-<h3 align="left">博士 特别副研究员 博士生导师</h3>
+<h3 align="left">博士 特别研究员 博士生导师</h3>
 <h3 align="left">Email：fzx@bit.edu.cn</h3>
 <p>&nbsp;</p>
 <h3>个人简介</h3>
-<p>冯泽心，男，2016年7月受聘为特别副研究员（预聘助理教授），2018年受聘为博导。主要研究方向包括光学工程的前沿代表性方向—自由曲面光学以及深度融合应用数学、光传输物理机制以及高性能计算的计算光学。主持或参与国家重点研发计划(子课题分项负责人)、国家自然科学基金青年基金(负责人),  国家重大科研仪器研制项目(参与)等项目。在Optics Letters、Optics Express等著名光学期刊上发表多篇论文, 获较多引用与关注, 并多次受邀参加OSA、SPIE会议并作特邀报告。</p>
+<p>冯泽心，男，2016年7月受聘为特别副研究员（预聘助理教授），2018年受聘为博导,2021年受聘为特别研究员（长聘副教授）。主要研究方向包括光学工程的前沿代表性方向—自由曲面光学以及深度融合应用数学、光传输物理机制以及高性能计算的计算光学。主持或参与国家重点研发计划(子课题分项负责人)、国家自然科学基金青年基金(负责人),  国家重大科研仪器研制项目(参与)等项目。在Optics Letters、Optics Express等著名光学期刊上发表多篇论文, 获较多引用与关注, 并多次受邀参加OSA、SPIE会议并作特邀报告。</p>
 <h3>教育经历</h3>
 <p>2007.9-2012.6 工学博士, 清华大学电子工程系, 电子科学与技术专业</p>
 <p>2002.9-2006.7 理学学士, 电子科技大学物理电子学院, 应用物理专业</p>
@@ -81,7 +81,8 @@
 
 <h3>工作经历</h3>
 
-<p>2016.07-至今，北京理工大学光电学院，预聘助理教授/特别副研究员</p>
+<p>2021.09-至今，北京理工大学光电学院，长聘副教授/特别研究员</p>
+<p>2016.07-2021.09，北京理工大学光电学院，预聘助理教授/特别副研究员</p>
 <p>2014.04-2016.04，亚利桑那大学光科学学院，博士后</p>
 <p>2012.07-2014.03，清华大学精密仪器系，博士后</p>
 
