--- a/yt_personal.html
+++ b/yt_personal.html
@@ -69,11 +69,11 @@
                                                 <div class="col-9">
 
 <h2 align="left">杨通</h2>
-<h3 align="left">博士 特别副研究员 硕士生导师</h3>
+<h3 align="left">博士 特别副研究员 博士生导师</h3>
 <h3 align="left">Email：yangtong@bit.edu.cn</h3>
 <p>&nbsp;</p>
 <h3>个人简介</h3>
-<p>杨通，男，博士，北京理工大学光电学院特别副研究员。长期在应用光学、光学设计领域从事教学和科研工作，主要研究方向包括光学设计、自由曲面光学、光学成像等方面。主持或参与国家自然科学基金、国家重点研发计划等项目。在Light: Science & Applications（Nature旗下期刊，2020影响因子13.714）、Optics Express等期刊发表论文20余篇。已获得授权发明专利27项。入选中国科协青年人才托举计划项目，曾获得金国藩青年学子奖（奖励高校教师）、第四届全国光学工程学科优秀博士学位论文等奖励。</p>
+<p>杨通，男，博士，北京理工大学光电学院特别副研究员、博士生导师。长期在应用光学、光学设计领域从事教学和科研工作，主要研究方向包括光学设计、自由曲面光学、光学成像等方面。主持或参与国家自然科学基金、国家重点研发计划等项目。以第一或者通讯作者在Light: Science & Applications（Nature旗下期刊，2020影响因子13.714）、Optics Express等期刊发表论文20余篇。已获得授权发明专利30余项。入选中国科协青年人才托举计划项目，曾获得金国藩青年学子奖（奖励高校教师）、第四届全国光学工程学科优秀博士学位论文等奖励。</p>
 <h3>教育经历</h3>
 <p>2012.08-2017.07，清华大学，光学工程专业，博士</p>
 <p>2008.09-2012.06，天津大学，（光电）信息工程专业，学士</p>
