--- a/cc_personal.html
+++ b/cc_personal.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>王涌天 - 北理工光学成像与计算实验室</title>
+		<title>杨通 - 北理工光学成像与计算实验室</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -60,7 +60,7 @@
 
 													<!-- Feature -->
 														<section class="box feature">
-															<a class="image featured"><img src="images/wyt_p.jpg" alt="" /></a>
+															<a class="image featured"><img src="images/cc_p2.jpg" alt="" /></a>
 															
 														</section>
 
@@ -69,23 +69,20 @@
                                                 
                                                 <div class="col-9">
 
-<h2 align="left">王涌天</h2>
-<h3 align="left">博士 教授 博士生导师</h3>
-<h3 align="left">Email：wyt@bit.edu.cn</h3>
+<h2 align="left">池骋</h2>
+<h3 align="left">博士 特别副研究员 硕士生导师</h3>
+<h3 align="left">Email：cheng.chi@bit.edu.cn</h3>
 <p>&nbsp;</p>
 <h3>个人简介</h3>
-<p>王涌天，男，博士，北京理工大学光电学院教授。1986年获英国Reading大学物理系工学博士学位并继续做博士后研究工作。1988年回国后来到北京理工大学工作至今，其间先后应邀赴英国、西班牙、日本、美国有关大学进行合作研究。2000年获得国家杰出青年科学基金的资助，2002年受聘为教育部特聘教授，2006年成为教育部创新团队带头人，2013年受聘“国家重点基础研究发展计划项目首席科学家”。</p>
+<p>池骋，男，博士，北京理工大学光电学院特别副研究员、硕士生导师。</p>
 
+
+<h3>工作经历</h3>
+
+<p>2021.09-至今，北京理工大学光电学院，预聘助理教授/特别副研究员</p>
 
 <h3>研究领域</h3>
-<p>长期在技术光学和虚拟现实领域从事教学和科研工作，目前承担的科研项目包括国家高技术研究发展计划（863）课题、国家自然科学基金仪器专项、国际合作课题等。主要研究方向包括成像和照明光学系统设计和CAD，新型光学元件，虚拟现实和增强现实技术、系统和应用，医学图像处理与手术导航等方面。</p>
-
-
-<h3>社会与学术兼职</h3>
-<p>全国政协委员，国务院学位委员会学科评议组成员，教育部科学技术委员会委员，中国光学学会理事，国际工程光学学会（SPIE）资深会员（Fellow）等。多次应邀担任由国际光学委员会（ICO）、国际工程光学学会（SPIE）、中国光学学会（COS）、美国光学学会（OSA）、日本光学学会（OSJ）组织的国际学术会议的大会组委会成员、分会主席、特邀报告人，以及国际标准组织有关标准的制定专家组成员。</p>
-
-<h3>科研成果</h3>
-<p>有关科研成果获得国家技术发明奖二等奖1项，国家科技进步三等奖1项，中国光学工程学会科技创新奖一等奖、中国图象图形学学会科学技术奖一等奖，中国产学研合作促进会创新成果奖一等奖，以及其他多项省部级奖项。发表论文400余篇，其中SCI论文120余篇，出版专著1部、译著2部，编辑SPIE或Springer出版的国际会议论文集10部，获得美国、欧洲发明专利授权4项，国际、国家发明专利30余项。出版教材2部，其中《应用光学》英文版被评为北京市高等教育精品教材。先后获“全国五一劳动奖章”、北京市优秀教师、北京市教育创新标兵，获得北京市教育教学成果奖1项、中国学位与研究生教育学会研究生教育成果奖1项。指导的学生中，有10余人获得校优秀博士论文，1人获得全国优博提名奖、1人获得北京市优博。</p>
+<p>新型光学成像、微纳光学</p>
 
 
 
