--- a/fzx_personal.html
+++ b/fzx_personal.html
@@ -36,6 +36,7 @@
 								<li><a href="cdw_personal.html">程德文老师</a></li>
 								<li><a href="fzx_personal.html">冯泽心老师</a></li>
                                 <li><a href="yt_personal.html">杨通老师</a></li>
+                                <li><a href="cc_personal.html">池骋老师</a></li>
 							</ul>
                         </li>
 						<li><a href="research.html">研究方向</a></li>
