--- a/wyt_personal.html
+++ b/wyt_personal.html
@@ -74,18 +74,14 @@
 <h3 align="left">Email：wyt@bit.edu.cn</h3>
 <p>&nbsp;</p>
 <h3>个人简介</h3>
-<p>王涌天，男，博士，北京理工大学光电学院教授。1986年获英国Reading大学物理系工学博士学位并继续做博士后研究工作。1988年回国后来到北京理工大学工作至今，其间先后应邀赴英国、西班牙、日本、美国有关大学进行合作研究。2000年获得国家杰出青年科学基金的资助，2002年受聘为教育部特聘教授，2006年成为教育部创新团队带头人，2013年受聘“国家重点基础研究发展计划项目首席科学家”。</p>
-
-
-<h3>研究领域</h3>
-<p>长期在技术光学和虚拟现实领域从事教学和科研工作，目前承担的科研项目包括国家高技术研究发展计划（863）课题、国家自然科学基金仪器专项、国际合作课题等。主要研究方向包括成像和照明光学系统设计和CAD，新型光学元件，虚拟现实和增强现实技术、系统和应用，医学图像处理与手术导航等方面。</p>
+<p>王涌天，男，博士。北京理工大学杰出教授，教育部创新团队带头人、杰青，光电学院和计算机学院博导，北京市混合现实与新型显示工程技术研究中心主任。</p>
 
 
 <h3>社会与学术兼职</h3>
-<p>全国政协委员，国务院学位委员会学科评议组成员，教育部科学技术委员会委员，中国光学学会理事，国际工程光学学会（SPIE）资深会员（Fellow）等。多次应邀担任由国际光学委员会（ICO）、国际工程光学学会（SPIE）、中国光学学会（COS）、美国光学学会（OSA）、日本光学学会（OSJ）组织的国际学术会议的大会组委会成员、分会主席、特邀报告人，以及国际标准组织有关标准的制定专家组成员。</p>
+<p>兼任全国政协委员，科技部云计算和大数据国家重点研发专项总体专家组副组长，全国信息技术标准化技术委员会委员、虚拟现实与增强现实标准工作组组长，中国图象图形学学会副理事长，中国光学工程学会常务理事，中国光学学会监事，中国计算机学会理事，北京图象图形学学会理事长，北京光学学会副理事长，并先后被国际工程光学学会(SPIE)、英国工程技术学会(IET)、美国光学学会(OSA)、中国光学学会(COS)和中国仪器仪表学会(CIS)评选为会士(Fellow)。</p>
 
-<h3>科研成果</h3>
-<p>有关科研成果获得国家技术发明奖二等奖1项，国家科技进步三等奖1项，中国光学工程学会科技创新奖一等奖、中国图象图形学学会科学技术奖一等奖，中国产学研合作促进会创新成果奖一等奖，以及其他多项省部级奖项。发表论文400余篇，其中SCI论文120余篇，出版专著1部、译著2部，编辑SPIE或Springer出版的国际会议论文集10部，获得美国、欧洲发明专利授权4项，国际、国家发明专利30余项。出版教材2部，其中《应用光学》英文版被评为北京市高等教育精品教材。先后获“全国五一劳动奖章”、北京市优秀教师、北京市教育创新标兵，获得北京市教育教学成果奖1项、中国学位与研究生教育学会研究生教育成果奖1项。指导的学生中，有10余人获得校优秀博士论文，1人获得全国优博提名奖、1人获得北京市优博。</p>
+<h3>研究领域与科研成果</h3>
+<p>长期在技术光学、虚拟现实和增强现实领域从事教学和科研工作，有关成果得到广泛应用，获得国家技术发明奖和国家科技进步奖各1项，省部级和国家一级学会科技奖励10余项；发表专著3部、SCI论文260余篇，授权国内外发明专利150余项。</p>
 
 
 
