--- a/cdw_personal.html
+++ b/cdw_personal.html
@@ -104,7 +104,7 @@ a:active {
 <p>2011.07-2016.07，北京理工大学光电学院，副教授</p>
 
 <h3>研究领域</h3>
-<p>光学设计、自由曲面光学、头戴显示技术、AR/VR、视光学</p>
+<p>光学设计、自由曲面光学、头戴显示技术、AR/VR、视光学、全息显示</p>
 
 <h3>主讲课程</h3>
 <p>主讲本科生课程《光学系统设计与工艺实践》、研究生课程《现代光电系统设计》</p>
