--- a/cdw_personal.html
+++ b/cdw_personal.html
@@ -75,7 +75,7 @@ a:active {
 
 													<!-- Feature -->
 														<section class="box feature">
-															<a class="image featured"><img src="images/cdw.png" alt="" /></a>
+															<a class="image featured"><img src="images/cdw_p5.jpg" alt="" /></a>
 															
 														</section>
 
