--- a/news.html
+++ b/news.html
@@ -59,7 +59,8 @@
 								<!-- Features -->
 									<section class="box features">
 										<h2 class="major"><span>新闻纪录</span></h2>
-
+                                        
+<p>[2021-12-11] 我们有关大出瞳直径、有视度调节功能的自由曲面视透型头戴显示系统设计与研制的论文在线发表于顶级期刊<strong>Photonics Research</strong>。</p>
 <p>[2021-10-10] 实验室教师冯泽心在COS/SPIE Photonics Asia 2021学术会议做<strong>邀请报告</strong>“Iterative freeform lens design for extended light source”。
 <p>[2021-09-14] 实验室教师杨通在EOS Annual Meeting (EOSAM) 2021学术会议做<strong>邀请报告</strong>“Designing freeform imaging optics based on machine learning”。
 <p>[2021-09-14] 实验室教师冯泽心在SPIE Optical System Design 2021学术会议做<strong>邀请报告</strong>“Optimizing freeform lenses for non-rectangular irradiance tailoring of extended LED sources”。
