--- a/publications.html
+++ b/publications.html
@@ -101,6 +101,8 @@ a:active {
 
 <h3>2021年</h3>
 
+<p>[68]	Dewen Cheng, Jiaxi Duan, Hailong Chen, He Wang, Danyang Li, Qiwei Wang, Qichao Hou, Tong Yang, Weihong Hou, Donghua Wang, Xiaoyu Chi, Bin Jiang, and Yongtian Wang*, "Freeform OST-HMD system with large exit pupil diameter and vision correction capability," <strong>Photonics Research</strong> 10, 21-32 (2022).<a href="https://doi.org/10.1364/PRJ.440018"> DOI: 10.1364/PRJ.440018</a></p>
+
 <p>[67]	Dewen Cheng, Qiwei Wang, Yue Liu, Hailong Chen, Dongwei Ni, Ximeng Wang, Cheng Yao, Qichao Hou, Weihong Hou, Gang Luo, and Yongtian Wang*, "Design and manufacture AR head-mounted displays: A review and outlook," <strong>Light: Advanced Manufacturing</strong> 2, 24 (2021).<a href="https://doi.org/10.37188/lam.2021.024"> DOI: 10.37188/lam.2021.024</a></p>
 
 <p>[66]	Dewen Cheng, Hailong Chen, Tong Yang*, Jun Ke, Yang Li, and Yongtian Wang, "Optical design of a compact and high-transmittance compressive sensing imaging system enabled by freeform optics," <strong>Chinese Optics Letters</strong> 19, 112202 (2021).<a href="https://doi.org/10.3788/COL202119.112202"> DOI: 10.3788/COL202119.112202</a></p>
