--- a/members.html
+++ b/members.html
@@ -260,7 +260,7 @@
                                                             <p class="class2" align="left">研究方向：光学检测、光学设计</p>
                                                             <p class="class2" align="left">博士：云南大学</p>
                                                             <p class="class2" align="left">博士专业：光学</p>
-                                                            <p class="class2" align="left">Email：weili911126@163.com</p>
+                                                            <p class="class2" align="left">Email：weilioptic@bit.edu.cn</p>
 
 
 														</section>
